fixed login/register menu spacing when switching between mobile/tablet

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -205,7 +205,6 @@ select[multiple] {
 * 2.1.1. Region user first
 *******************************************/
 #region-user-first {
-  height: 100%;
   float: left;
 }
 /* User menu */
@@ -222,6 +221,7 @@ select[multiple] {
   position: relative;
   left: 50%;
   text-align: center;
+  margin-top: 2px;
 }
 .block-menu-kickstart-user-menu .content ul li {
   display: block;
@@ -230,6 +230,7 @@ select[multiple] {
   list-style: none;
   margin: 0;
   padding: 0;
+  padding-bottom: 3px;
   position: relative;
   right: 50%;
 }
@@ -238,7 +239,6 @@ select[multiple] {
   display: block;
   font-family: $headerfont;
   font-weight: 400;
-  line-height: 25px;
   border-radius: 4px;
   color: #ffffff;
   padding: 5px 6px;
