--- a/scss/omega-kickstart-alpha-default-narrow.scss
+++ b/scss/omega-kickstart-alpha-default-narrow.scss
@@ -28,13 +28,13 @@
 .block-menu-kickstart-user-menu .content ul,
 .block-menu-kickstart-user-menu .content ul li,
 .block-menu-kickstart-user-menu .content ul li a {
-  display: inline;
+  
 }
 .block-menu-kickstart-user-menu .content ul {
   text-align: right;
   clear: inherit;
   float: right;
-  margin-top: 2px;
+  
   margin-right: 10px;
   position: inherit;
   left: inherit;
@@ -42,7 +42,7 @@
 }
 .block-menu-kickstart-user-menu .content ul li {
   float: left;
-  padding-bottom: 3px;
+  
   position: inherit;
   right: inherit;
 }
